--- a/datavis.html
+++ b/datavis.html
@@ -130,7 +130,7 @@ For the bubble chart, we were not able to complete all the correlations we had h
 
 <br />
 
-<p>We extracted data from responses to the <a href = "http://www2.psy.unsw.edu.au/dass/" >DASS Survey</a> and D3.js to create the visualization.</p>
+<p>We extracted data from responses to the <a href = "http://www2.psy.unsw.edu.au/dass/" >DASS Survey</a> and used D3.js to create the visualization.</p>
 <br />
 <br />
 <img class = "screens" src ="images/fulldatavis.png">
