--- a/projtracker.html
+++ b/projtracker.html
@@ -272,7 +272,7 @@ Overall, we see the value of our app compared to alternatives to be the categori
       <li> Users can choose preset units of measurement, none, or custom</li>
 </div>
 
-<h2> <a href = "https://tm-project-tracker.herokuapp.com/">View the app</a></h2>
+<h2 style = "text-align: center"> <a href = "https://tm-project-tracker.herokuapp.com/">View the app</a></h2>
 
 <br /><br />
 
