change width text

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </a>
           <!-- <h4 style="margin-bottom:35px">Aspiring UX designer studying Information Science at Cornell 👩🏻‍💻</h4> -->
           <div class="text-center">
-          <h4 style="margin-bottom:35px">Aspiring <span id="type"></span><span id="blinker">|</span> studying Information Science at Cornell 👩🏻‍💻</h4>
+          <h4 style="margin-bottom:35px; width:1000px">Aspiring <span id="type"></span><span id="blinker">|</span> studying Information Science at Cornell 👩🏻‍💻</h4>
           </div>
 
           <ul class="header-links--inline">
