--- a/iqvia.html
+++ b/iqvia.html
@@ -76,12 +76,14 @@
 
 .upload{
   margin-bottom: 10px;
+  width:auto;
 }
 
 
 
 .center{
-  width:auto;
+  width:100%;
+  height:auto;
 }
 </style>
 
