--- a/about.html
+++ b/about.html
@@ -75,9 +75,9 @@
           <div id="portfolio" class="twelve column">
             <div class="row end" style="margin-top:90px;">
               <div class= "four columns">
-                <img class="avatar" src="images/headshot2.jpg">
+                <!-- <img class="avatar" src="images/headshot2.jpg"> -->
 
-
+        <img class="avatar" style = "width:500px" src="images/2.png">
 
 
 <!--social media icons-->
@@ -131,6 +131,14 @@
 
 
 <br />
+
+
+<style scoped>
+
+  .offset-by-two.columns          { margin-left: 21.3333333333%; }
+
+</style>
+
 
 
 </body>
