--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
               <div class= "four columns">
                 <!-- <img class="avatar" src="images/headshot2.jpg"> -->
 
-        <img class="avatar" style = "width:500px" src="images/2.png">
+        <img class="avatar" style = "width:400px" src="images/2.png">
 
 
 <!--social media icons-->
@@ -134,8 +134,8 @@
 
 
 <style scoped>
-
-  .offset-by-two.columns          { margin-left: 21.3333333333%; }
+/*
+  .offset-by-two.columns          { margin-left: 21.3333333333%; } */
 
 </style>
 
