--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
               <div class= "four columns">
                 <!-- <img class="avatar" src="images/headshot2.jpg"> -->
 
-        <img class="avatar" style = "width:400px" src="images/2.png">
+        <img class="avatar"  src="images/2.png">
 
 
 <!--social media icons-->
@@ -134,8 +134,17 @@
 
 
 <style scoped>
-/*
-  .offset-by-two.columns          { margin-left: 21.3333333333%; } */
+
+.avatar{
+  width:400px;
+}
+
+@media only screen and (max-width: 480px) {
+  .avatar{
+width:100%;
+  }
+
+}
 
 </style>
 
