--- a/projtracker.html
+++ b/projtracker.html
@@ -104,7 +104,7 @@ What are the pain points people have with project tracking apps? To delve deeper
 <!-- <p>From there we created personas to help us refine and focus our design.
 </p> -->
 <br />
-<div class = "row">
+<div style = "text-align:center" class = "row">
 
 <img id="myImg" src="images/smoker_persona.png" style="max-width:700px; display:inline">
 <!-- The Modal -->
