cusd comment out

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-109128002-1']);
     _gaq.push(['_trackPageview']);
-
     (function() {
       var ga = document.createElement('script');
       ga.type = 'text/javascript';
@@ -99,7 +98,6 @@
             <div class="row card" style="margin-top:40px;">
               <div class= "four columns">
                 <a href="groupme">
-
                 <img class="mockup" src="images/groupme.png">
               </a>
               </div>
@@ -136,7 +134,6 @@
                           <h6 style="margin-bottom: 20px"> Countdown app for a class  </h6>
                           <h6 style="margin-bottom: 20px">Coming soon.
                           </h6>
-
                         </div>
                       </div>
                     </div>
@@ -159,7 +156,6 @@
                                           <!-- <a href="iqvia"> -->
 
                                           <!-- <img id="imac" style="margin-bottom: 10px;" height="245" width="400" src="images/Imac.png">
-
                                         </div>
                                         <div class="six offset-by-two columns">
                                           <h5 class="u-dark" style="margin-bottom: 10px">Grubhub Food Preferences</h5>
@@ -400,12 +396,14 @@
               </div>
               <div class="six offset-by-two columns">
                 <h5 class="u-dark" style="margin-bottom: 10px">Cornell Undergraduate Sustainable Design</h5>
-                <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017
+                <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017 - Present
                 </h6>
 
-                <h6 style="margin-bottom: 20px"> In Fall of 2017, I was accepted to the CUSD project team at Cornell University, joining their Technical Operations team.
+                <h6 style="margin-bottom: 20px"> I was accepted to the CUSD project team at Cornell University in 2017 and I am currently leading their design team.
                 </h6>
-                <a class="button underline" href="https://medium.com/@jc2747/designing-a-hub-for-cornell-sustainable-design-b961b7952008">View</a>
+                <!-- <a class="button underline" href="https://medium.com/@jc2747/designing-a-hub-for-cornell-sustainable-design-b961b7952008">View</a> -->
+                <h6 style="margin-bottom: 20px">Report coming soon.
+                </h6>
               </div>
             </div>
           </div>
@@ -475,15 +473,12 @@
                 <img class="mockup" src="images/issaranon.png">
                 </a>
               </div>
-
-
               <div class="six offset-by-two columns">
                 <h5 class="u-dark" style="margin-bottom: 10px">Issaranon Kindergarten</h5>
                 <h6 class="u-grey" style="margin-bottom: 20px">Spring 2016
                 </h6>
                 <h6 style="margin-bottom: 20px">During my semester abroad I taught English to kindergarteners in Bangkok, Thailand.
                 </h6>
-
                 <h6 style="margin-bottom: 20px">Report coming soon.
                 </h6>
               </div>
@@ -526,7 +521,6 @@
 
 
 <script>
-
 class Typewriter {
   constructor(id, arr){
     this.el = document.getElementById(id);
@@ -588,11 +582,8 @@ class Typewriter {
     this.interval = setInterval(function () { self.addLetters(); }, this.period);
   }
 }
-
 var type = new Typewriter('type', ["Product Manager", "UX Designer"]);
 type.type();
-
-
 </script>
 
 
@@ -603,13 +594,11 @@ type.type();
 text-decoration: underline;
 transition: 3s;
 } */
-
       .underline {
         display: inline;
         position: relative;
         overflow: hidden;
       }
-
       .underline:after {
         content: "";
         position: absolute;
@@ -624,41 +613,31 @@ transition: 3s;
         transition-duration: 0.3s;
         transition-timing-function: ease-out;
       }
-
       .underline:hover:after,
       .underline:focus:after,
       .underline:active:after {
         right: 0;
       }
-
-
       @keyframes draw {
         0% {
           stroke-dasharray: 140 540;
           stroke-dashoffset: -474;
           stroke-width: 8px;
         }
-
         100% {
           stroke-dasharray: 760;
           stroke-dashoffset: 0;
           stroke-width: 2px;
         }
       }
-
       .svg-wrapper:hover .shape {
         -webkit-animation: 0.5s draw linear forwards;
         animation: 0.5s draw linear forwards;
       }
-
-
-
-
 /* typewriter effect */
 #type {
   display: inline-block;
 }
-
       #blinker {
         background: #F4B9B2 !important;
         background: -webkit-linear-gradient(45deg, #f857a8, #ff5858);
@@ -667,14 +646,12 @@ transition: 3s;
         background-clip: text;
         -webkit-background-clip: text;
           color: transparent;
-
       }
       #blinker.blink {
         animation-name: type;
         animation-duration: .75s;
         animation-iteration-count: infinite;
       }
-
       @keyframes type {
         0% {
           opacity: 1;
@@ -683,22 +660,18 @@ transition: 3s;
           opacity: 0;
         }
       }
-
       .long{
         width:1000px
       }
-
       @media only screen and (max-width: 1090px) {
         #imac {
           width: 300px;
           height: 200px;
           margin: 6px 0;
         }
-
         .long{
           width:350px
         }
-
       }
     </style>
 
@@ -718,7 +691,6 @@ transition: 3s;
       })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
       ga('create', 'UA-55358044-2', 'auto');
       ga('send', 'pageview');
-
       AOS.init({
         easing: 'ease-in-quad',
          disable: 'mobile'
