--- a/other.html
+++ b/other.html
@@ -105,7 +105,7 @@ Below are some of the visuals I have made over the years.
 
 
 <img class = "mobile" src="images/final2.gif" style="margin-bottom: 10px;" height="400" width="500">
-<p style="margin-bottom: 20px; text-align: center"> A character that I created for HCI research
+<p style="margin-bottom: 20px; text-align: center"> A language-teaching character that I designed with another student for HCI research.
 </p>
 <br />
 <br />
