--- a/yr.html
+++ b/yr.html
@@ -68,7 +68,7 @@
 
 <h4>Original Design</h4>
 <br />
-<img class = "center" src="images/olddesign.png">
+<img class = "center upload" src="images/olddesign.png">
 <p>
   The old website was made using Weebly. Each page had the same hero image, which made navigation a difficulty.
 </p>
@@ -90,14 +90,14 @@
 
   <p>With this in mind, I created several graphics for the website:</p>
 
-<img src="images/lab.png" height="180" width="550">
-<img src="images/network.png" height="210" width="550">
+<img class = "upload" src="images/lab.png" height="180" width="550">
+<img class = "upload" src="images/network.png" height="210" width="550">
 
 
 <br /><br /> <br /><br />
 <h4>Final Product</h4>
 <br />
-  <img src="images/youresearch.png" height="310" width="550">
+  <img class = "upload" src="images/youresearch.png" height="310" width="550">
   <br />
 <p>
   Using Semantic UI as a framework, I exercised my skills in HTML/CSS, with a touch of PHP and Javascript to create the new website. I became more comfortable using Git for version control as well. Rebranding an established non-profit was a great way for me to practice web development and branding.</p>
@@ -105,6 +105,23 @@
 <br /><br /><br />
 <h5>Check out the live site: <a href="http://youresearch.org/">Youresearch.org</a> </h5>
 <br /><br /><br /><br />
+
+
+
+
+
+<style scoped>
+
+
+.upload{
+  margin-bottom: 10px;
+  max-width:100%;
+  height: auto;
+}
+p
+</style>
+
+
 
 </body>
 </html>
