--- a/givingtree.html
+++ b/givingtree.html
@@ -42,7 +42,7 @@
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
-            <li class="u-grey"><a target="_blank" href="Jintana Cunningham Resume.pdf">Resume</a></li>
+            <li class="u-grey"><a target="_blank" href="JRESUME.pdf">Resume</a></li>
                 <!-- <li class="u-grey"><a href="photography">Photography</a></li> -->
 
         </div>
