--- a/cusd.html
+++ b/cusd.html
@@ -42,7 +42,7 @@
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
-            <li class="u-grey"><a target="_blank" href="JRESUME.pdf">Resume</a></li>
+            <li class="u-grey"><a target="_blank" href="JintanaResume.pdf">Resume</a></li>
                 <!-- <li class="u-grey"><a href="photography">Photography</a></li> -->
             <li class="u-grey"><a target="_blank" href="hhttps://www.linkedin.com/in/jintana-cunningham/">LinkedIn</a></li>
             <li class="u-grey"><a target="_blank" href="mailto:jc2747@cornell.edu">Email</a></li>
