--- a/yr.html
+++ b/yr.html
@@ -52,7 +52,7 @@
 
 <div class="header"><h3>YouResearch Redesign</h3></div>
 <div class="info"
-<p><strong>YouResearch</strong> is a non-profit run by students for students. The non-profit leader board includes motivated students involved in research ranging from Stanford to Columbia. I was selected as the Web Director of this organization to give their website a modern rebranding.</p> </div>
+<p><strong>YouResearch</strong> is a non-profit run by students for students. The non-profit leader board includes motivated students involved in research ranging from Stanford to Columbia. I was selected as the Web Director of this organization to give their website a modern rebranding in 2017.</p> </div>
 <!-- <img class = "center" src="images/yr.jpg"> -->
 <div class="info">
 
@@ -87,7 +87,8 @@
 </li>
 </ul>
 
-
+<img class = "upload" src="images/nonprofit.png" height="210" width="550">
+<br />
   <p>With this in mind, I created several graphics for the website:</p>
 
 <img class = "upload" src="images/lab.png" height="180" width="550">
