--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ class Typewriter {
     this.interval = setInterval(function () { self.addLetters(); }, this.period);
   }
 }
-var type = new Typewriter('type', ["Product Manager", "UX Designer"]);
+var type = new Typewriter('type', ["UX Designer", "Product Manager"]);
 type.type();
 </script>
 
