--- a/bofa.html
+++ b/bofa.html
@@ -54,7 +54,7 @@
 <div class="info"
 <p>
   This summer I had the opportunity to work at Bank of America as a UX Engineer Intern. Through my 10 week internship I worked on developing a design library to be used by 1000 applications. I created a dark mode version of the components in the system, making sure that they were all ADA compliant.
-  Details on my projects and my process are coming soon and some will potentially be NDA. Contact me if you want to learn more!
+  Details on my projects are NDA, please contact me if you want to learn more!
 </p>
 
 
