--- a/bofa.html
+++ b/bofa.html
@@ -53,7 +53,7 @@
 <div class="header"><h3>Bank of America</h3></div>
 <div class="info"
 <p>
-  This summer I had the opportunity to work at Bank of America as a UX Engineer Intern. Through my 10 week internship I worked on developing a design library to be used by 1000 applications. I created a dark mode version of the components in the system, making sure that they were all ADA compliant.
+  This summer I had the opportunity to work at Bank of America as a UX Engineer Intern. Through my 10 week internship I created new Angular components of an internal search engine used by 500,000+ and worked on developing a design library to be used by 1000+ applications for Global Banking and Markets. I created a scalable dark mode version of the components in the system, making sure that they were all ADA compliant.
   Details on my projects are NDA, please contact me if you want to learn more!
 </p>
 
