--- a/projtracker.html
+++ b/projtracker.html
@@ -272,15 +272,18 @@ Overall, we see the value of our app compared to alternatives to be the categori
       <li> Users can choose preset units of measurement, none, or custom</li>
 </div>
 
+
+ <br /><br />
+<h4>Future Considerations</h4>
+<br />
+<p>If we were to work on this project further, it would be interesting to add project tracking analytics as an onboarding experience.</p> -->
+ <br /><br />
+
+
 <h2 style = "text-align: center"> <a href = "https://tm-project-tracker.herokuapp.com/">View the app</a></h2>
 
 <br /><br />
 
-
-<!-- <br /><br />
-<h4>Future Considerations</h4>
-<br />
-<p>If we were to work on this project further, it would be interesting to add project tracking analytics as well as make the app responsive for web.</p> -->
 
 
 
