--- a/projtracker.html
+++ b/projtracker.html
@@ -274,9 +274,10 @@ Overall, we see the value of our app compared to alternatives to be the categori
 
 
  <br /><br />
-<h4>Future Considerations</h4>
+<h4>Reflection and Future Considerations</h4>
 <br />
-<p>If we were to work on this project further, it would be interesting to add project tracking analytics as an onboarding experience.</p> -->
+<p>This app was my first exploration of behavior design. Some of the choices we made, such as the emojis, really resonated with our interviewees during beta testing. These details are what keep users engaged. <br />
+  If we were to work on this project further, it would be interesting to add project tracking analytics as an onboarding experience.</p> -->
  <br /><br />
 
 
