--- a/yr.html
+++ b/yr.html
@@ -60,7 +60,7 @@
 <h4>Representation</h4>
 <br />
 <p>
-  At YouResearch, our mission is to empower high school students through professional mentorship and real-world research opportunities, breaking the mold of how tomorrow’s leaders are trained. We do this through one-on-one personalized assistance from experienced student researchers; local laboratory placement and direct mentorship as a part of our Scholars Program; and information and various resources about research programs and competitions, important happenings in academia and industry, and relevant experiences amongst its team members. This rebranding was essential for Youresearch to be taken seriously as it grew as an organization.
+  At YouResearch, the mission is to empower high school students through professional mentorship and real-world research opportunities, breaking the mold of how tomorrow’s leaders are trained. We do this through one-on-one personalized assistance from experienced student researchers; local laboratory placement and direct mentorship as a part of our Scholars Program; and information and various resources about research programs and competitions, important happenings in academia and industry, and relevant experiences amongst its team members. This rebranding was essential for Youresearch to be taken seriously as it grew as an organization.
 </p>
 
 </br><br />
@@ -77,13 +77,19 @@
 <br /><br /><br />
 <h4> Market Research</h4>
 <br />
-<p>I looked at other non-profit organizations for inspiration. Common themes I noticed were:</p>
+<p>I looked at other non-profit STEM organizations for inspiration. Common themes I noticed were:</p>
 <ul>
 <li>
-  Use of graphics
+  Use of graphics which benefits engagement
 </li>
 <li>
   Minimal animation
+</li>
+<li>
+  Cool color tones, evoking professionalism
+</li>
+<li>
+  Co
 </li>
 </ul>
 
