--- a/projtracker.html
+++ b/projtracker.html
@@ -277,7 +277,7 @@ Overall, we see the value of our app compared to alternatives to be the categori
 <h4>Reflection and Future Considerations</h4>
 <br />
 <p>This app was my first exploration of behavior design. Some of the choices we made, such as the emojis, really resonated with our interviewees during beta testing. These details are what keep users engaged. <br />
-  If we were to work on this project further, it would be interesting to add project tracking analytics as an onboarding experience.</p> -->
+  If we were to work on this project further, it would be interesting to add project tracking analytics as an onboarding experience.</p> 
  <br /><br />
 
 
