--- a/index.html
+++ b/index.html
@@ -83,10 +83,7 @@
       </div>
     </div>
   </div>
-  <!--
-<div class="typewriter">
-  <h4>The cat and the hat.</h4>
-</div> -->
+
 
 
 
@@ -116,35 +113,6 @@
 
 
 
-  <!-- <div class="section-work" style="background-color:#FCFCFC">
-                <div class="container">
-                  <div class="row">
-                    <div id="portfolio" class="twelve column">
-                      <div class="row card" style="margin-top:40px;">
-                        <div class= "four columns">
-                          <!-- <a href="iqvia"> -->
-
-  <!-- <img style="margin-bottom: 10px;" height="200" width="120" src="images/schoolwork.png"> -->
-  <!-- </a>
-                        </div>
-                        <div class="six offset-by-two columns" >
-                            <h5 class="u-dark" style="margin-bottom: 10px">CountOn</h5>
-                          <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
-                          </h6>
-                          <h6 style="margin-bottom: 20px"> Countdown app for a class  </h6>
-                          <h6 style="margin-bottom: 20px">Coming soon.
-                          </h6>
-                        </div>
-                      </div>
-                    </div>
-                    </div>
-                    </div>
-                    </div> -->
-
-
-
-
-
 
                             <!-- <div class="section-work grow" style="background-color:#FCFCFC">
                               <div class="topBar" data-aos="fade-up" data-aos-duration="800">
@@ -155,7 +123,7 @@
                                         <div class="four columns"> -->
                                           <!-- <a href="iqvia"> -->
 
-                                          <!-- <img id="imac" style="margin-bottom: 10px;" height="245" width="400" src="images/Imac.png">
+                                          <!-- <img id="imac" style="margin-bottom: 10px;" height="245" width="400" src="images/egg.png">
                                         </div>
                                         <div class="six offset-by-two columns">
                                           <h5 class="u-dark" style="margin-bottom: 10px">Grubhub Food Preferences</h5>
