--- a/projtracker.html
+++ b/projtracker.html
@@ -269,7 +269,7 @@
 
       <br /><br />
       <h4>Final Product</h4>
-
+<!--
       <div class="row">
         <div class="column">
           <img class="screens" src="images/projtracker/4340_Mockups-01.png">
@@ -292,8 +292,9 @@
         <div class="column">
           <img class="screens" src="images/projtracker/4340_Mockups-10.png">
           <img class="screens" src="images/projtracker/4340_Mockups-11.png">
-        </div>
+        </div> -->
 
+        <br />
         <br />
 
         <p>We used Vue, custom CSS, JSON and Javascript to implement the app.</p>
