--- a/projtracker.html
+++ b/projtracker.html
@@ -315,7 +315,7 @@
         <h4>Reflection and Future Considerations</h4>
         <br />
         <p>This app was my first exploration of behavior design. Some of the choices we made, such as the emojis, really resonated with our interviewees during beta testing. These details are what keep users engaged. <br />
-          If we were to work on this project further, it would be interesting to add project tracking analytics as an onboarding experience.</p>
+          If we were to work on this project further, it would be interesting to add project tracking analytics as an onboarding experience. <b>The app currently is only supported for mobile, be on the lookout for a web version!</b></p>
         <br /><br />
     <br /><br />
 
