--- a/projtracker.html
+++ b/projtracker.html
@@ -261,6 +261,7 @@
           <li> "Delete project" within 3-dot menu</li>
       </div>
 
+  <img class="screens" src="images/designboard.png">
 
       <br /><br />
 
