--- a/projtracker.html
+++ b/projtracker.html
@@ -64,7 +64,7 @@
   </div>
 
   <!--
-<img class = "screens" src ="images/screens.png"> -->
+Persuading people through technology is the next social revolution -BJ Fogg-->
   <div class="info">
     <h5 style="font-weight: 400">
 
