--- a/projtracker.html
+++ b/projtracker.html
@@ -217,21 +217,10 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
       <!-- <img src ="images/affinity.png" style="width:400px"> -->
       <img id="myImg" src="images/affinity.png" style="max-width:700px; display:inline">
       <!-- The Modal -->
-      <!-- <div id="myModal" class="modal">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="img01">
-  <div id="caption"></div>
-</div> -->
+
 
       <img id="myImg" src="images/brainstorm_3.0.jpg" style="max-width:700px; display:inline">
-      <!-- The Modal -->
-      <!-- <div id="myModal" class="modal">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="img01">
-  <div id="caption"></div>
-</div> -->
-      <!--
-<img src ="images/brainstorm_3.0.jpg" style="width:400px"> -->
+
       <br />
       <br />
       <p>
@@ -261,6 +250,10 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
           <li> "Delete project" within 3-dot menu</li>
       </div>
 
+
+      <br /><br />
+      <h4> Look and Feel</h4>
+      <br />
   <img class="screens" src="images/designboard.png">
 
       <br /><br />
