--- a/projtracker.html
+++ b/projtracker.html
@@ -254,7 +254,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
       <br /><br />
       <h4> Look and Feel</h4>
       <br />
-  <img class="screens" src="images/designboard.png">
+  <img class="screens" style = "width: 900px" src="images/designboard.png">
 
       <br /><br />
 
@@ -266,26 +266,26 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
 <br />
       <div class="row">
         <div class="column">
-          <img class="screens" src="images/projtracker/4340_Mockups-01.png">
-          <img class="screens" src="images/projtracker/4340_Mockups-02.png">
-          <img class="screens" src="images/projtracker/4340_Mockups-03.png">
+          <img class="screens" style = "width: 500px" src="images/projtracker/4340_Mockups-01.png">
+          <img class="screens" style = "width: 500px" src="images/projtracker/4340_Mockups-02.png">
+          <img class="screens" style = "width: 500px" src="images/projtracker/4340_Mockups-03.png">
         </div>
 
         <div class="column">
-          <img class="screens" src="images/projtracker/4340_Mockups-04.png">
-          <img class="screens" src="images/projtracker/4340_Mockups-05.png">
-          <img class="screens" src="images/projtracker/4340_Mockups-06.png">
+          <img class="screens" style = "width: 500px" src="images/projtracker/4340_Mockups-04.png">
+          <img class="screens" style = "width: 500px" src="images/projtracker/4340_Mockups-05.png">
+          <img class="screens" style = "width: 500px"  src="images/projtracker/4340_Mockups-06.png">
         </div>
 
         <div class="column">
-          <img class="screens" src="images/projtracker/4340_Mockups-07.png">
-          <img class="screens" src="images/projtracker/4340_Mockups-08.png">
-          <img class="screens" src="images/projtracker/4340_Mockups-09.png">
+          <img class="screens" style = "width: 500px" src="images/projtracker/4340_Mockups-07.png">
+          <img class="screens" style = "width: 500px" src="images/projtracker/4340_Mockups-08.png">
+          <img class="screens" style = "width: 500px" src="images/projtracker/4340_Mockups-09.png">
         </div>
 
         <div class="column">
-          <img class="screens" src="images/projtracker/4340_Mockups-10.png">
-          <img class="screens" src="images/projtracker/4340_Mockups-11.png">
+          <img class="screens" style = "width: 500px" src="images/projtracker/4340_Mockups-10.png">
+          <img class="screens" style = "width: 500px" src="images/projtracker/4340_Mockups-11.png">
         </div>
   </div>
 
@@ -349,7 +349,6 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
             padding-left: 400px;
             text-align: left;
           }
-
 
           @media only screen and (max-width: 600px) {
             .right {
