--- a/projtracker.html
+++ b/projtracker.html
@@ -345,6 +345,26 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
           }
 
 
+          /* Responsive layout - makes a two column-layout instead of four columns */
+          @media screen and (max-width: 800px) {
+            .column {
+              flex: 50%;
+              max-width: 50%;
+            }
+          }
+
+          /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+          @media screen and (max-width: 600px) {
+            .column {
+              flex: 100%;
+              max-width: 100%;
+            }
+          }
+
+
+
+
+
           .right {
             padding-left: 400px;
             text-align: left;
