--- a/projtracker.html
+++ b/projtracker.html
@@ -380,6 +380,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
 
           .screens {
             width: 100%;
+            height:auto;
           }
 
 
