--- a/projtracker.html
+++ b/projtracker.html
@@ -254,7 +254,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
       <br /><br />
       <h4> Look and Feel</h4>
       <br />
-  <img class="screens" style = "width: 900px" src="images/designboard.png">
+  <img class="screens"  src="images/designboard.png">
 
       <br /><br />
 
