--- a/projtracker.html
+++ b/projtracker.html
@@ -381,6 +381,7 @@ Persuading people through technology is the next social revolution -BJ Fogg-->
           .screens {
             width: 100%;
             height:auto;
+            max-width:900px
           }
 
 
